Remove MaxPermSize option
as it is removed in JDK 8