@@ -182,7 +182,7 @@ subprojects {
             }
             if (isTravisBuild) {
                 maxParallelForks = 2
-                jvmArgs = ['-server', '-Xmx1024M', '-XX:MaxPermSize=128m']
+                jvmArgs = ['-server', '-Xmx1024M']
                 forkEvery = 20
                 afterSuite {
                     System.out.print('.')
@@ -191,7 +191,7 @@ subprojects {
             } else {
                 maxParallelForks = 4
                 forkEvery = 100
-                jvmArgs = ['-server', '-Xmx2048M', '-XX:MaxPermSize=256m']
+                jvmArgs = ['-server', '-Xmx2048M']
             }
             if(System.getProperty("debug.tests")) {
                 jvmArgs '-Xmx2g', '-Xdebug', '-Xnoagent', '-Djava.compiler=NONE',
@@ -236,7 +236,7 @@ subprojects {
             options.encoding "UTF-8"
             options.docEncoding "UTF-8"
             options.charSet "UTF-8"
-            options.jFlags "-Xms64M", "-Xmx512M", "-XX:MaxPermSize=256m"
+            options.jFlags "-Xms64M", "-Xmx512M"
         }
 
         configure([groovydoc]) {
